--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Unique sports experiences for veteran rugby and hockey teams in the Valencian Community and Costa del Sol. Travel, enjoy, and live the sport like a legend." />
     <title>Vivasportgo+</title>
   </head>
   <body>
