add informaticon and program

--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Unique sports experiences for veteran rugby and hockey teams in the Valencian Community and Costa del Sol. Travel, enjoy, and live the sport like a legend." />
-    <title>Vivasportgo+</title>
+  
+    <title>Rugby +40 y Hockey +40 Europa | Viva Sport GO</title>
+  
+    <!-- SEO meta -->
+    <meta name="description" content="Conectamos jugadores +40 de rugby y hockey en toda Europa. Torneos internacionales para veteranos en Reino Unido, Irlanda, Francia, Italia, Alemania, Suiza y más. Unite a la comunidad Viva Sport GO." />
+    <meta name="keywords" content="rugby veteranos, hockey veteranos, rugby +40, hockey +40, torneos rugby europa, rugby social, hockey internacional, rugby francia, rugby reino unido, rugby alemania, rugby italia, rugby mayores de 40, rugby costa del sol, rugby valencia" />
+  
+    <!-- Open Graph (para compartir bien en redes sociales) -->
+    <meta property="og:title" content="Viva Sport GO - Rugby y Hockey +40 en Europa" />
+    <meta property="og:description" content="Torneos y experiencias internacionales para jugadores +40 de rugby y hockey en toda Europa. Disfrutá el deporte como una leyenda." />
+    <meta property="og:url" content="https://viva-sport-go.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://viva-sport-go.vercel.app/logo.svg" />
+  
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Viva Sport GO - Rugby y Hockey +40 en Europa" />
+    <meta name="twitter:description" content="Experiencias y torneos deportivos para veteranos en UK, Irlanda, Francia, Alemania, Italia, y más." />
+    <meta name="twitter:image" content="https://viva-sport-go.vercel.app/logo.svg" />
   </head>
+  
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
